# NewtonFractal

./: CMakeLists.txt  README.md
src/: main.cpp
src/FractalCalculation/: NewtonFractal.ispc
src/FractalImage/: FractalImage.cpp  FractalImage.h
src/SaveImage/: SaveImage.cpp  SaveImage.h
src/Scene/: Scene.cpp  Scene.h
src/SetEquation/: SetEquation.cpp  SetEquation.h
